Add Google Analytics to antibody research hub page

--- a/antibody-research/index.html
+++ b/antibody-research/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antibody Research Hub | De Novo Design & Developability | InventCures</title>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WJQ85601BN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-WJQ85601BN');
+    </script>
     <meta name="description" content="Collection of analyses on AI-driven antibody design: de novo platforms comparison, developability benchmarks, and the FLAb dataset analysis.">
     
     <!-- Open Graph -->
